# dwpose_restorator

./: AGENTS.md  CHANGES.md  COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.txt  INDEPENDENCE_REPORT.md  JSON_SERIALIZATION_FIX.md  QUICK_REFERENCE.md  README.md  TECHNICAL_ARCHITECTURE.md  VISUAL_OVERVIEW.md  __init__.py  demonstration.py  nodes.py  pose_types.py  pose_visualization.py  pyproject.toml  requirements.txt  test_integration.py  test_nodes.py  test_output.txt
ui/: package.json
